--- a/hpkt.config
+++ b/hpkt.config
@@ -13,3 +13,4 @@ PACKET_IN_DEVICE_NAME=
 PACKET_IN_ETH_SRC_ADD=b8ac6fcb499f
 PACKET_IN_ETH_DST_ADD=b8ac6fcb499f
 PACKET_SEND_DISABLE=1
+PACKET_WORKER_THREADS=30
